--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h1 class="osnov-title">Ефективні рішення для вашого бізнесу</h1>
             <button data-modal-open type="button" class="osnov-btn">Замовити послугу</button>
             </div>
-        </section>
+        </section> -->
         <section class="info">
             <div class="container">
             <ul class="info-list list">
@@ -277,7 +277,7 @@
     </main>
     <!--Підвал-->
     <footer class="end">
-        <div class="container end-flex ">
+        <!--<div class="container end-flex ">
             <div class="logi">
                  <a href="./index.html" class="logo-go"><span class="logo-titel">Web</span><span
                         class="logo-pre-title">Studio</span></a>
