--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!--Шапка-->
     <header class="logo">
-        <div class="container header-container">
+       <div class="container header-container">
             <nav class="logo-nav">
      <a href="./index.html" class="logo-nav-text__link"><span class="logo-titel">Web</span><span class="logo-pre">Studio</span></a>
      
@@ -55,7 +55,7 @@
             <h1 class="osnov-title">Ефективні рішення для вашого бізнесу</h1>
             <button data-modal-open type="button" class="osnov-btn">Замовити послугу</button>
             </div>
-        </section> -->
+        </section>
         <section class="info">
             <div class="container">
             <ul class="info-list list">
@@ -277,7 +277,7 @@
     </main>
     <!--Підвал-->
     <footer class="end">
-        <!--<div class="container end-flex ">
+        <div class="container end-flex ">
             <div class="logi">
                  <a href="./index.html" class="logo-go"><span class="logo-titel">Web</span><span
                         class="logo-pre-title">Studio</span></a>
@@ -393,5 +393,6 @@
             </div>
         </div>
  <script src="./js/modal.js"></script>
+ <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
