--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <!--Шапка-->
     <header class="logo">
-        <div class="container header-container">
+        <!--<div class="container header-container">
             <nav class="logo-nav">
      <a href="./index.html" class="logo-nav-text__link"><span class="logo-titel">Web</span><span class="logo-pre">Studio</span></a>
      
@@ -28,7 +28,7 @@
         </ul>
      </nav>
       <!--Контакти-->
-     <ul class="contacts-list list">
+     <!--<ul class="contacts-list list">
         <li class="contacts-item">
             <a href="mailinfo@devstudio.com" class="contacts-mail__link">
                 <svg width="16px" height="12px">
@@ -50,13 +50,13 @@
     </header>
     <!--Головний-->
     <main>
-        <section class="hero">
+        <!--<section class="hero">
             <div class="container">
             <h1 class="osnov-title">Ефективні рішення для вашого бізнесу</h1>
             <button data-modal-open type="button" class="osnov-btn">Замовити послугу</button>
-            </div>
+            </div>-->
         </section>
-        <section class="info">
+        <!--<section class="info">
             <div class="container">
             <ul class="info-list list">
                 <li class="info-item icon-antenna">
@@ -77,8 +77,8 @@
                 </li>
             </ul>
             </div>
-        </section>
-        <section class="robota">
+        </section>-->
+        <!--<section class="robota">
             <h2 class="robota-titel">Чим ми займаємося</h2>
             <ul class="robota__list list">
                 <li class="robota__item">
@@ -106,7 +106,7 @@
                       </div>
                     </li>
             </ul>
-        </section>
+        </section>-->
         <section class="team">
             <div class="container">
             <h2 class="team-titel">Наша команда</h2>
@@ -231,7 +231,7 @@
             </ul>
             </div>
         </section>
-        <section class="client">
+        <!--<section class="client">
             <div class="container">
             <h2 class="client-titel">Постійні клієнти</h2>
             <ul class="client-list list">
@@ -276,7 +276,7 @@
         </section>
     </main>
     <!--Підвал-->
-    <footer class="end">
+    <!--<footer class="end">
         <div class="container end-flex ">
             <div class="logi">
                  <a href="./index.html" class="logo-go"><span class="logo-titel">Web</span><span
