--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </li>
             </ul>
             </div>
-        </section>-->
+        </section>
         <!--<section class="robota">
             <h2 class="robota-titel">Чим ми займаємося</h2>
             <ul class="robota__list list">
@@ -106,8 +106,8 @@
                       </div>
                     </li>
             </ul>
-        </section>-->
-        <section class="team">
+        </section>
+        <!--<section class="team">
             <div class="container">
             <h2 class="team-titel">Наша команда</h2>
             <ul class="team__list list">
@@ -230,7 +230,7 @@
                 </li>
             </ul>
             </div>
-        </section>
+        </section>-->
         <!--<section class="client">
             <div class="container">
             <h2 class="client-titel">Постійні клієнти</h2>
@@ -276,7 +276,7 @@
         </section>
     </main>
     <!--Підвал-->
-    <!--<footer class="end">
+    <footer class="end">
         <div class="container end-flex ">
             <div class="logi">
                  <a href="./index.html" class="logo-go"><span class="logo-titel">Web</span><span
